CHANGES.txt - 02/01/2001
------------------------

CHANGES IN HTMLDOC v1.8.10

    NEW FEATURES

	- New "--quiet" option to suppress error messages sent to
	  stderr.
	- New chapter n/N page number format (:)
	- New "--links" and "--no-links" options for PDF output.
	- Added "&euro;" character name support.

    CHANGES

	- Documentation updates.
	- If a heading already contains a link, the name assigned for
	  the heading is stored in the existing link to avoid nested
	  links.
	- The table parsing code now also traverses THEAD and TFOOT
	  sections and handles multiple TBODY, THEAD, and TFOOT
	  sections.  The THEAD and TFOOT rows are treated as ordinary
	  rows.
	- Image alignment should now match W3C recommendations.
	- Newlines inside quoted values (e.g. SRC="filename\r\n")
	  are now ignored.
	- The STYLE data generated in HTML output now includes the
	  TYPE="text/css" attribute.

    BUG FIXES

	- The path support was still broken.
	- Embedded files and images did not use path or HTTP
	  support.
	- Table cell borders could be drawn on the wrong page
	  if not all cells in a row span more than one page.
	- Large images could end up covering the footer at the
	  bottom of the page (wasn't accounting for the line
	  spacing.)


CHANGES IN HTMLDOC v1.8.9

    NEW FEATURES

	- Added a "--no-numbered" option to turn heading numbers
	  off.
	- Added support for "keywords" META data.
	- Added support for BMP images.
	- Added support for ROWSPAN attribute in tables.
	- Added support for HTTP file references.
	- Added new sample CGI program that can produce a PDF
	  file for any page on a server.
	- Added new n/N, date, and time formats for the header
	  and footer.

    CHANGES

	- Configuration script changes.
	- Now ignore file count in book files; instead, we now
	  look at the first character of the third and
	  subsequent lines - a dash (-) indicates the start of
	  the options. (use a backslash to quote filenames
	  starting with a dash)